flux/apps/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-grafana
